--- a/src/content/docs/en/pages/build-journey/overview/overview.mdx
+++ b/src/content/docs/en/pages/build-journey/overview/overview.mdx
@@ -12,17 +12,14 @@ import Button from '~/components/Button.astro'
 
 Azion Build products are your starting point for utilizing the power of edge computing in your applications.
 
-**Edge Application** allows you to build applications closer to end users, offering low latency processing at the edge. When you build an edge application, you can determine the origin of your content and configure the domain that will be used to deliver your application to end users. Through the reverse proxy architecture, the edge processes user requests and maintains cached data, decentralizing object storage and optimizing data transfer rates and efficiency. This scalability allows you to adapt to the growth of traffic demand without overloading your infrastructure and reducing maintenance costs.
+## Edge Application
 
-<Button href="/en/documentation/products/edge-foundations/what-edge-computing-is/" variant="secondary" text="Go to Edge Foundations"></Button>
+**Edge Application** allows you to build applications closer to end users, offering low latency processing at the edge. When you build an edge application, you can determine the origin of your content and configure the domain that will be used to deliver your application to end users. 
 
-Azion provides a range of tools to configure your application at the edge: 
+<Button href="/en/documentation/products/edge-application/" variant="secondary" text="Go to Edge Application documentation"></Button>
 
-- [Real-Time Manager (RTM)](https://manager.azion.com): provides a user-friendly interface to configure your application and monitor data.
-- [Azion CLI](/en/documentation/products/build/develop-with-azion/cli/): enables the team to interact with Azion's system directly from the command line interface.
-- [Azion API](https://api.azion.com): allows you to integrate and automate application deployment, scaling, and monitoring processes.
-- [Terraform](/en/documentation/products/terraform-provider/): integrate your infrastructure with Azion using Terraform.
+Through the reverse proxy architecture, the edge processes user requests and maintains cached data, decentralizing object storage and optimizing data transfer rates and efficiency. This scalability allows you to adapt to the growth of traffic demand without overloading your infrastructure and reducing maintenance costs.
 
-When you build an edge application, you can determine where your content will be retrieved from and configure the domain that will be used to deliver your application to your end-users.
+![Overview of a request/response through Edge Application](/assets/docs/images/uploads/edge-app-overview.png)
 
-Go to the next page to build your edge application from scratch.
+When a user requests content from your edge application, their browser converts the requested domain into a pre-set IP address via DNS resolution. This directs the request to an edge node, where all the processing of an application occurs. At this stage, in addition to security and observability customizations, the edge node processes and includes any security and observability modifications. The request then goes through each Edge Application configuration, and any cached content at the edge gets delivered directly. Following this, the system uses load balancing algorithms to distribute requests across multiple origins. Post mediation by the Azion Platform, the request reaches its origin that responds back. The edge once again processes this response before delivering it to the user.
