--- a/src/content/docs/pt-br/pages/produtos/data-streaming/index.mdx
+++ b/src/content/docs/pt-br/pages/produtos/data-streaming/index.mdx
@@ -8,6 +8,7 @@ permalink: /documentacao/produtos/data-streaming/
 
 import Badge from '~/components/Badge.astro';
 import Button from '~/components/Button.astro'
+import ContributorList from '~/components/ContributorList.astro'
 
 **Data Streaming** é um produto de [Observe](pt-br/documentacao/produtos/observe/) que permite que você alimente suas plataformas de stream, SIEM e big data com os logs de eventos de suas aplicações na Azion em tempo real. Para manter uma performance avançada, usa a codificação ASCII para evitar problemas de parser e problemas na interpretação dos dados.
 
@@ -526,3 +527,7 @@ Ocorre quando o endpoint responde ao teste com sucesso, mas não recebe as mensa
 Ocorre quando o endpoint é declarado como *unavailable*, indisponível, pela monitoração do endpoint. Portanto, o Data Streaming não tenta enviar as mensagens.
 
 Como o sistema é distribuído, não é possível saber qual o servidor específico que envia as mensagens para cada endpoint.
+<br /><br />
+---
+
+**Contributors** <ContributorList>Contributor</ContributorList>
