--- a/src/content/docs/en/pages/azion-edge-runtime/compatibility/frameworks.mdx
+++ b/src/content/docs/en/pages/azion-edge-runtime/compatibility/frameworks.mdx
@@ -1,14 +1,19 @@
 ---
 title: Frameworks compatibility
-description: Compatibility between Azion Edge Runtime and web frameworks through Vulcan.
+description: Compatibility between Azion and web frameworks through Vulcan.
 namespace: documentation_products_runtime_frameworks
-permalink: documentation/products/runtime-api/compatibility/frameworks/
+meta_tags: web frameworks, jamstack
+permalink: /documentation/products/devtools/azion-edge-runtime/frameworks-compatibility/
 menu_namespace: runtimeMenu
+
 ---
+
+import Badge from '~/components/Badge.astro';
+
 
 ## [Vulcan](https://github.com/aziontech/vulcan)
 
-Azion supports some frameworks. This support is upheld by an open-source framework adapter called [Vulcan](https://github.com/aziontech/vulcan), which automates polyfills for edge computing.
+[Vulcan](https://github.com/aziontech/vulcan) is Azion's framework adapter built to run on our Edge Runtime. It's an evolving project aimed at supporting various JavaScript frameworks. The project is open source and encourages community contributions.
 
 Azion provides different ways to get started and work with web frameworks: 
 
@@ -24,45 +29,55 @@ Azion employs the terminology `compute` and `deliver` to describe the operationa
 | Mode | Description |
 |-     |-            |
 |Compute | This mode is designed for applications that require computational processing at the Edge, whether it's for Front-End Server-Side Rendering (SSR) or Back-End tasks. In Compute Mode, Azion enables the execution of code and processing of dynamic content at the Edge to enhance performance and responsiveness. | 
-|Deliver | Deliver Mode is tailored for frameworks that primarily focus on handling and routing incoming requests at the Edge, with an emphasis on efficiently serving static files. While applications in Deliver Mode do not execute dynamic code, they excel in optimizing the delivery of static content to end-users, thereby ensuring smooth and fast content distribution. |
+|Deliver (static) | Deliver Mode is tailored for frameworks that primarily focus on handling and routing incoming requests at the Edge, with an emphasis on efficiently **serving static files**. While applications in Deliver Mode do not execute dynamic code, they excel in optimizing the delivery of static content to end-users, thereby ensuring smooth and fast content distribution. |
 
 ---
 
 ## Next.js 
 
 **SSR** 
-(compute)
+<Badge variant="accent">
+  Compute
+</Badge>
 
-The Azion Edge Runtime supports the following:
+For Next.js Server-side rendering, Azion supports:
 
-- Next.js version 12.3.1
+- Next.js **version 12.3.1**
 - Pages router
 - Next Node runtime version 12.3.1
+- Pages format
+- Index page (static)
+- API Route 
+- SSR page
+- Dynamic route
+- Nested route
 
-**Currently the following implementations are in progress and aren't supported yet**:
+Currently the following implementations are in progress and **aren't supported**:
 
 - Edge Runtime
 - Next.js 13.x.y features (example: `app router`)
-- fonts/google
 
 :::note
-If the project is in Next.js version 12.3.1, some dependencies won't work and must be resolved.
+If the Next.js project isn't in **v12.3.1**, the build process won't work.
 :::
 
 **SSG**
-(deliver)
+<Badge variant="accent">
+  static
+</Badge>
 
-**Implementation**
+Implementation:
 
 - [Azion CLI how to build with Next.js](/en/documentation/products/build/develop-with-azion/frameworks-specific/next/)
-- [RTM Next.js boilerplate](/en/documentation/products/guides/nextjs-static-boilerplate/)
 
 ---
 
 ## Angular 
-(deliver)
+<Badge variant="accent">
+  static
+</Badge>
 
-Angular is an open-source web framework designed with an emphasis on speed and suitability for websites that contain substantial content
+Angular is an open-source web framework designed with an emphasis on speed and suitability for websites that contain substantial content.
 
 Learn more about [Angular](https://angular.io/docs).
 
@@ -72,7 +87,9 @@ Learn more about [Angular](https://angular.io/docs).
 ---
 
 ## Astro
-(deliver)
+<Badge variant="accent">
+  static
+</Badge>
 
 Astro offers a modern and user-friendly method for creating websites. It blends established performance principles from decades of web development with the convenience of component-based development trends. You can use your preferred JavaScript framework and, by default, Astro ensures that only the essential JavaScript is sent to the user.
 
@@ -84,7 +101,9 @@ Astro offers a modern and user-friendly method for creating websites. It blends 
 ---
 
 ## Hexo
-(deliver)
+<Badge variant="accent">
+  static
+</Badge>
 
 Hexo is listed on [the Jamstack documentation](https://jamstack.org/generators/hexo/) as a static site generator, aligned to the Jamstack approach.
 
@@ -98,7 +117,9 @@ Learn more about [Hexo](https://hexo.io/docs/).
 
 
 ## React
-(deliver)
+<Badge variant="accent">
+  static
+</Badge>
 
 React is listed on [the Jamstack documentation](https://jamstack.org/generators/react-static/) as a static site generator, aligned to the Jamstack approach.
 
@@ -113,7 +134,9 @@ Learn more about [React](https://react.dev/).
 ---
 
 ## Vite
-(deliver)
+<Badge variant="accent">
+  static
+</Badge>
 
 Vite is listed on [the Jamstack documentation](https://jamstack.org/generators/vite/) as a static site generator, aligned to the Jamstack approach.
 
@@ -124,7 +147,9 @@ Learn more about [Vite](https://vitejs.dev/).
 ---
 
 ## Vue
-(deliver)
+<Badge variant="accent">
+  static
+</Badge>
 
 Vue.js is a user-friendly, versatile, and approachable JavaScript framework for building web applications and user interfaces. Its progressive nature, reactivity system, component-based architecture, and thriving community make it a popular choice for both beginners and experienced developers in the world of front-end web development.
 
