--- a/src/content/docs/en/pages/azion-edge-runtime/compatibility/node-vulcan-build.mdx
+++ b/src/content/docs/en/pages/azion-edge-runtime/compatibility/node-vulcan-build.mdx
@@ -1,9 +1,9 @@
 ---
-title: Azion Edge Runtime and Node.js compatibility
-description: Azion Edge Runtime and Node.js compatibility
-meta_tags: edge, javascript
-namespace: documentation_products_azion_runtime_node
-permalink: documentation/products/azion-edge-runtime/compatibility/node/
+title: Vulcan and Node.js compatibility
+description: Vulcan and Node.js compatibility
+meta_tags: edge, javascript, adapter, developer experience
+namespace: documentation_products_azion_vulcan_node
+permalink: documentation/products/vulcan/compatibility/node/
 menu_namespace: runtimeMenu
 ---
 
