--- a/src/content/docs/en/pages/devtools/azion-edge-runtime/api-reference/object-storage/object-storage.mdx
+++ b/src/content/docs/en/pages/devtools/azion-edge-runtime/api-reference/object-storage/object-storage.mdx
@@ -7,12 +7,12 @@ permalink: /documentation/devtools/runtime/api-reference/storage/
 menu_namespace: runtimeMenu
 ---
 
-The [Edge Functions]() storage API is an interface that allows access to Azion Storage. Through this interface, it's possible to write and retrieve data.
+The [Edge Functions](/en/documentation/products/edge-application/edge-functions/) storage API is an interface that allows access to the Azion Object Storage. Through this interface, it's possible to read and write data in the storage and its buckets.
 
 ## Class instantiation
 
 
-To leverage this API, you need to import and instantiate the Storage class, passing the bucket's name.
+To leverage this API, you need to import and instantiate the `Storage` class, passing the bucket's name.
 
 ### Syntax
 
@@ -32,11 +32,11 @@ const storage = new Storage(bucket);
 
 | Parameter | Type | Description |
 | - | - | - |
-| `bucket` | string | Name of a bucket created during an [Azion CLI]() deploy or through [RTM](). |
+| `bucket` | string | Name of a bucket created during an [Azion CLI](/en/documentation/products/azion-cli/overview/) deploy or through [RTM](/en/documentation/products/guides/getting-to-know-real-time-manager/). |
 
 ### Return value
 
-Storage object used to access Azion Storage
+Storage object used to access Azion Object Storage.
 
 ---
 
@@ -44,10 +44,10 @@ Storage object used to access Azion Storage
 
 ### async Storage.put
 
-The Storage.put method is used to insert a new object to Azion Storage.
+The `Storage.put` method is used to insert a new object into the storage.
 
 :::note
-This is an async method, and must be used with await or event.waitUntil.
+This is an async method, and must be used with `await` or `event.waitUntil`.
 :::
 
 #### Syntax
@@ -60,13 +60,13 @@ async Storage.put(key, value, options)
 
 | Parameter | Type | Description |
 | - | - | - |
-| `key` | string | Identifier that allows the search for an object in the Storage. |
-| `value` | ArrayBuffer ou ReadableStream | Content of the object being stored. In case `value` implements a [ReadableStream](), the Stream APIs can be used and the option `content-lenght` is required. |
+| `key` | string | Identifier that allows the search for an object in the storage. |
+| `value` | ArrayBuffer ou ReadableStream | Content of the object being stored. In case `value` implements a [ReadableStream](https://developer.mozilla.org/en-US/docs/Web/API/ReadableStream), the Stream APIs can be used and the option `content-lenght` is required. |
 | `options` | object | The `options` attributes are described in the table below. |
 
 **options**
 
-To pass the `options` parameter, it's necessary to provide an object with the following attributes:
+To pass the `options` parameter, you must provide an object with the following attributes:
 
 | Attribute | Type | Description |
 | - | - | - |
@@ -78,11 +78,11 @@ To pass the `options` parameter, it's necessary to provide an object with the fo
 
 | Success | Error |
 |-|-|
-| No response| It throws a `StorageError`|
+| No response | Throws a `StorageError`|
 
 #### Code sample
 
-1. Persisting the request body:
+1. To persist the request body:
 
 ```js
 import Storage from "azion:storage";
@@ -106,7 +106,7 @@ addEventListener("fetch", (event) => {
 });
 ```
 
-2. Persisting a JSON object:
+2. To persist a JSON object:
 
 ```js
 import Storage from "azion:storage";
@@ -134,7 +134,7 @@ addEventListener("fetch", (event) => {
 
 ```
 
-3. Saving a JSON with metadata:
+3. To save a JSON with metadata:
 
 ```js
 import Storage from "azion:storage";
@@ -170,10 +170,10 @@ addEventListener("fetch", (event) => {
 
 ### async storage.get(key)
 
-the `storage.get(key)` method is used to retrieve an object.
+The `storage.get(key)` method is used to retrieve an object.
 
 :::note
-The method is async, and must be used with await or event.waitUntil.
+The method is async and must be used with `await` or `event.waitUntil`.
 :::
 
 #### Syntax 
@@ -186,18 +186,18 @@ async storage.get(key)
 
 | Parameter | Type | Description |
 | - | - | - |
-| `key` | string | Identifier that allows the search for an object in the Storage. |
+| `key` | string | Identifier that allows the search for an object in the bucket. |
 
 #### Return 
 
 | Success | Error | 
 |-|-|
-| Returns an object of the class `StorageObject` | It throws a `StorageError`|
+| Returns an object of the class `StorageObject` | Throws a `StorageError`|
 
 
 #### Code sample
 
-1. Retrieving content from the storage and returning it:
+1. To retrieve and return content from the storage:
 
 ```js
 import Storage from "azion:storage";
@@ -220,7 +220,7 @@ addEventListener("fetch", (event) => {
 });
 ```
 
-2. Getting a JSON from the storage:
+2. To get a JSON from the storage:
 
 ```js
 import Storage from "azion:storage";
@@ -243,7 +243,7 @@ addEventListener("fetch", (event) => {
 });
 ```
 
-3. Reading an object's metadata:
+3. To read an object's metadata:
 
 ```js
 import Storage from "azion:storage";
@@ -269,15 +269,13 @@ addEventListener("fetch", (event) => {
 
 ### async Storage.delete(key)
 
-the `storage.get(key)` method is used to retrieve an object.
+The `Storage.delete(key)` is used to remove an object from Azion Object Storage.
 
 :::note
-The method is async, and must be used with await or event.waitUntil.
+The method is async and must be used with `await` or `event.waitUntil`.
 :::
 
 #### Syntax 
-
-The `Storage.delete(key)` is used to remove an object from Azion Storage.
 
 ```js
 async Storage.delete(key)
@@ -287,18 +285,18 @@ async Storage.delete(key)
 
 | Parameter | Type | Description |
 | - | - | - |
-| `key` | string | Identifier that allows the search for an object in the Storage. |
+| `key` | string | Identifier that allows the search for an object in the bucket. |
 
 #### Return 
 
 | Success | Error | 
 |-|-|
-| Returns an object of the class `StorageObjectList` | It throws a `StorageError`|
+| No response | Throws a `StorageError`|
 
 
 #### Code sample
 
-1. Listing objects stored in Azion Storage related to a specific `bucket`:
+1. To remove an object stored in Azion Object Storage related to a specific `bucket`:
 
 ```js
 import Storage from "azion:storage";
@@ -324,7 +322,7 @@ addEventListener("fetch", (event) => {
 
 ### async Storage.list()
 
-the `Storage.list()` method is used to list all objects belonging to the specif `bucket`.
+the `Storage.list()` method is used to list all objects belonging to the specific `bucket`.
 
 :::note
 The method is async, and must be used with await or event.waitUntil.
@@ -332,27 +330,20 @@ The method is async, and must be used with await or event.waitUntil.
 
 #### Syntax 
 
-The `Storage.delete(key)` is used to remove an object from Azion Storage.
 ```js
 await storage.list()
 ```
-
-#### Parameters
-
-| Parameter | Type | Description |
-| - | - | - |
-| `key` | string | Identifier that allows the search for an object in the Storage. |
 
 #### Return 
 
 | Success | Error | 
 |-|-|
-| No response | It throws a `StorageError`|
+| Returns an object of the class StorageObjectList | It throws a `StorageError`|
 
 
 #### Code sample
 
-1. Removing an object from Azion Storage:
+1. Listing objects from Azion Storage:
 
 ```js
 import Storage from "azion:storage";
@@ -375,6 +366,7 @@ addEventListener("fetch", (event) => {
     event.respondWith(handleRequest(event));
 });
 ```
+
 ---
 
 ### StorageObject Class Methods
@@ -383,6 +375,6 @@ addEventListener("fetch", (event) => {
 |-|-|
 |`StorageObject.content`|Read-only property containing a ReadableStream for the content stored in the storage.|
 |`async StorageObject.arrayBuffer()`| Asynchronous function that returns an ArrayBuffer with the content stored in the storage. This method consumes the ReadableStream from the content property.|
-|`StorageObject.metadata`| Read-only property containing a Map object (https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map) with the metadata of the object stored in the storage.|
-| `StorageObject.contentType`|Read-only property containing the content-type of the content stored in the storage.|
+|`StorageObject.metadata`| Read-only property containing a [Map object](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map) with the metadata of the object stored in the storage.|
+| `StorageObject.contentType`|Read-only property containing the `content-type` of the content stored in the storage.|
 | `StorageObject.contentLength`|  Read-only property containing the size in bytes of the content stored in the storage.|
