adjust-deploy-menu

--- a/src/content/docs/en/pages/deploy-journey/configure-node/authorize-node/authorize-node.mdx
+++ b/src/content/docs/en/pages/deploy-journey/configure-node/authorize-node/authorize-node.mdx
@@ -1,5 +1,5 @@
 ---
-title: Authorize an edge node
+title: How to authorize an edge node
 description: Authorize an edge node on the platform to start orchestrating services and resources at the edge.
 meta_tags: deploy, orchestrator
 namespace: docs_deploy_authorize_node
@@ -13,7 +13,7 @@ import Button from '~/components/Button.astro'
 If you've already installed [Azion Orchestrator Agent]() on your device, the next step is to authorize the edge node on the platform. You can do so using:
 
 - [Real-Time Manager (RTM)](/en/documentation/products/guides/how-to-access-rtm/)
-- [Azion API](https://api.azion.com/#32f34add-9e9f-4b25-94c9-3cee4c266a23)
+- [Azion API](https://api.azion.com)
 
 <Button href="/en/documentation/products/guides/deploy/install-orchestrator-agent/" text="go to install edge orchestrator agent" variant="secondary"></Button>
 
@@ -54,7 +54,7 @@ curl --location --request PATCH 'https://api.azionapi.net/edge_nodes/authorize' 
 }'
 ```
 
-Now, your edge node is authorized and able to work with [edge services](/documentation/products/deploy/edge-orchestrator/edge-services/). 
+Now, your edge node is authorized and able to work with [edge services](/en/documentation/products/deploy/edge-orchestrator/edge-services/). 
 
 :::tip
 Check the [Azion API documentation](https://api.azion.com/) and the [OpenAPI specification](https://github.com/aziontech/azionapi-openapi/) to know more about all features available via API.
