--- a/src/content/docs/en/pages/deploy-journey/configure-node/bind-service/bind-service.mdx
+++ b/src/content/docs/en/pages/deploy-journey/configure-node/bind-service/bind-service.mdx
@@ -1,5 +1,5 @@
 ---
-title: Bind an edge service to an edge node
+title: How to bind an edge service to an edge node
 description: Edge Services allows orchestrated services to be managed on your own edge nodes. To do so, you must have an edge service created and to bind it to an edge node.
 meta_tags: deploy, orchestrator
 namespace: docs_deploy_bind_service
@@ -11,7 +11,7 @@ import Button from '~/components/Button.astro'
 
 **Edge Services** allows orchestrated services to be managed on your own edge nodes. To do so, you must have an edge service created and to bind it to an edge node.
 
-<Button href="" text="go to create an edge service" variant="secondary" target="_blank"></Button>
+<Button href="/en/documentation/products/guides/deploy/create-edge-service/" text="go to how to create an edge service guide" variant="secondary" target="_blank"></Button>
 
 You can create a relation between an edge node and an edge service using:
 
