--- a/src/content/docs/en/pages/deploy-journey/configure-node/create-service/create-service.mdx
+++ b/src/content/docs/en/pages/deploy-journey/configure-node/create-service/create-service.mdx
@@ -1,5 +1,5 @@
 ---
-title: Create an edge service
+title: How to create an edge service
 description: Create an edge service to work with edge nodes.
 meta_tags: deploy, orchestrator
 namespace: docs_deploy_create_service
