--- a/src/content/docs/en/pages/deploy-journey/deploy-service/deploy-service.mdx
+++ b/src/content/docs/en/pages/deploy-journey/deploy-service/deploy-service.mdx
@@ -1,6 +1,6 @@
 ---
 title: Deploy a service
-description: aaa
+description: Edge Orchestrator allows you to manage and control edge resources in real time, including the deployment, update, and management of various services and resources.
 meta_tags: deploy, orchestrator
 namespace: docs_deploy_overview
 menu_namespace: deployMenu
@@ -17,7 +17,7 @@ Azion provides two ways to manage edge nodes, edge services, resources, and cred
 - [Azion API](https://api.azion.com)
 - [Real-Time Manager (RTM)](/en/documentation/products/guides/how-to-access-rtm/)
 
-<Button href="/en/documentation/products/guides/deploy/install-orchestrator-agent/" text="go to Install Edge Orchestrator Agent guide" variant="secondary"></Button>
+<Button href="/en/documentation/products/guides/deploy/install-orchestrator-agent/" text="go to Install Edge Orchestrator agent guide" variant="secondary"></Button>
 
 ---
 
@@ -25,7 +25,7 @@ Azion provides two ways to manage edge nodes, edge services, resources, and cred
 
 To create an edge service, you need to give it an easy-to-remember name.
 
-<Button href="/en/documentation/products/guides/deploy/create-edge-service/" text="go to create an edge service guide" variant="secondary"></Button>
+<Button href="/en/documentation/products/guides/deploy/create-edge-service/" text="go to how to create an edge service guide" variant="secondary" target="_blank"></Button>
 
 ---
 
@@ -39,7 +39,7 @@ To create a resource, you need to:
 - Choose the `content-type` of the resource. Example: `text` and `shell-script`.
 - Add the content of the resource.
 
-<Button href="/en/documentation/products/guides/deploy/provision-files/" text="go to provision files guide" variant="secondary"></Button>
+<Button href="/en/documentation/products/guides/deploy/provision-files/" text="go to how to provision files guide" variant="secondary" target="_blank"></Button>
 
 ---
 
@@ -54,8 +54,6 @@ To do so:
 - Set the credential as active.
 
 <Button href="/en/documentation/products/guides/deploy/create-credentials/" text="go to create a credential guide" variant="secondary"></Button>
-<br/>
-<Button href="/en/documentation/products/deploy/credentials/" text="go to credentials reference documentation" variant="secondary"></Button>
 
 ---
 
@@ -65,7 +63,7 @@ With the credentials created:
 
 - Download and install the Edge Orchestrator agent with the recently created credentials.
 
-<Button href="/en/documentation/products/guides/deploy/install-orchestrator-agent/" text="go to Install Edge Orchestrator Agent guide" variant="secondary"></Button>
+<Button href="/en/documentation/products/guides/credentials/" text="go to how to generate credentials guide" variant="secondary" target="_blank"></Button>
 
 ---
 
@@ -75,7 +73,7 @@ With the Edge Orchestrator Agent installed on the device:
 
 - Authorize the edge node.
 
-<Button href="/en/documentation/products/guides/deploy/authorize-node/" text="go to authorize edge node guide" variant="secondary"></Button>
+<Button href="/en/documentation/products/guides/deploy/authorize-an-edge-node/" text="go to how to authorize an edge node guide" variant="secondary" target="_blank"></Button>
 <br/>
 <Button href="/en/documentation/products/deploy/edge-orchestrator/edge-node/" text="go to edge node reference documentation" variant="secondary"></Button>
 
@@ -87,6 +85,6 @@ Now, with the edge node created and authorized, you must link it with an edge se
 
 - Create a relation between edge service and edge node.
 
-<Button href="/en/documentation/products/guides/deploy/bind-service-node/" text="go to Bind an edge service to an edge node guide" variant="secondary"></Button>
+<Button href="/en/documentation/products/guides/deploy/bind-service-node//" text="how to bind an edge service to an edge node guide" variant="secondary" target="_blank"></Button>
 
 Once this relation is in place, when an update is triggered on the edge services, it'll be deployed to all nodes related to this service in particular.
