--- a/src/content/docs/en/pages/deploy-journey/overview/overview.mdx
+++ b/src/content/docs/en/pages/deploy-journey/overview/overview.mdx
@@ -16,26 +16,31 @@ Azion Deploy products are designed to enhance the efficiency of managing edge re
 
 Azion Edge Orchestrator is a versatile cloud management and provisioning service, specifically engineered for edge infrastructures and applications. It empowers operators and customers to manage and control edge resources in real time, including the deployment, update, and management of various components such as:
 
-- [Edge Services](/en/documentation/products/deploy/overview/#edge-services)
-- [Edge Nodes](/en/documentation/products/deploy/overview/#edge-nodes)
+- [Edge Services](/en/documentation/products/deploy/edge-orchestrator/edge-services/)
+- [Edge Nodes](/en/documentation/products/deploy/edge-orchestrator/edge-node/)
 
 Edge Orchestrator is adaptable to various environments, capable of running natively on the operating system, within containers, or on top of the [Azion Edge Runtime]().
 
 ![Overview deploy](/assets/docs/images/uploads/deploy-draft.png)
 
-An Azion Edge Orchestrator agent is installed on edge nodes and provides end-to-end encrypted remote node management from Real-Time Manager.
+An Azion Edge Orchestrator agent is installed on edge nodes and provides end-to-end encrypted remote node management from [Real-Time Manager (RTM)](/en/documentation/products/guides/how-to-access-rtm/).
 
 When the Azion Orchestrator Agent is installed on a device and the device is authorized, it now represents an Edge Node. A service can be linked to many edge nodes. When a service is updated, it'll automatically be deployed to the edge nodes to which it's related.
 
 <Button href="/en/documentation/products/deploy/edge-orchestrator/" text="go to edge orchestrator reference documentation" variant="secondary" target="_blank"></Button>
+<br />
+<Button href="/en/documentation/products/guides/deploy/install-orchestrator-agent/" text="go to how to install edge orchestrator agent" variant="secondary" target="_blank"></Button>
+
 
 ### Edge Services
 
-Azion Edge Services facilitates resource registration and configuration through [Real-Time Manager (RTM)](), enabling service orchestration on specified edge nodes.
+Azion Edge Services facilitates resource registration and configuration through [Real-Time Manager (RTM)](/en/documentation/products/guides/how-to-access-rtm/), enabling service orchestration on specified edge nodes.
 
 It allows configuration of install, uninstall, and reload triggers, and definition of resource dependencies for edge network service execution.
 
 <Button href="/en/documentation/products/deploy/edge-orchestrator/edge-services/" text="go to edge services reference documentation" variant="secondary" target="_blank"></Button>
+<br />
+<Button href="/en/documentation/products/guides/deploy/create-edge-service/" text="go to how to create an edge service" variant="secondary" target="_blank"></Button>
 
 ### Edge Nodes
 
@@ -44,6 +49,8 @@ An edge node is a device that has Azion Orchestrator Agent installed with the du
 Edge Orchestrator allows customers to manage their own edge nodes, independent of the Azion distributed network. To start provisioning applications, it's essential to configure edge nodes.
 
 <Button href="/en/documentation/products/deploy/edge-orchestrator/edge-node/" text="go to edge node reference documentation" variant="secondary" target="_blank"></Button>
+<br />
+<Button href="/en/documentation/products/guides/deploy/authorize-an-edge-node/" text="go to how to authorize an edge node" variant="secondary" target="_blank"></Button>
 
 ### Credentials 
 
