--- a/src/content/docs/en/pages/deploy-journey/configure-node/install-orch-agent/install-orch-agent.mdx
+++ b/src/content/docs/en/pages/deploy-journey/configure-node/install-orch-agent/install-orch-agent.mdx
@@ -1,5 +1,5 @@
 ---
-title: Install Edge Orchestrator Agent
+title: How install Edge Orchestrator Agent
 description: To begin the Edge Node installation process, you must download the Edge Orchestrator installation binary of your choice.
 meta_tags: deploy, orchestrator
 namespace: docs_deploy_install_agent
