--- a/src/content/docs/en/pages/deploy-journey/advanced-config/run-scripts/run-scripts.mdx
+++ b/src/content/docs/en/pages/deploy-journey/advanced-config/run-scripts/run-scripts.mdx
@@ -177,7 +177,7 @@ curl --location 'https://api.azionapi.net/edge_services/:id/resources' \
 
 ### Binding an edge service to an edge node  
 
-1. Run the following `LIST` request in your terminal, replacing `[TOKEN VALUE]` with your [personal token](/en/documentation/products/guides/personal-tokens/) and retrieve the edge node ID you wish to bind to an edge service:
+1. Run the following `GET` request in your terminal, replacing `[TOKEN VALUE]` with your [personal token](/en/documentation/products/guides/personal-tokens/) and retrieve the edge node ID you wish to bind to an edge service:
 
 ```bash 
 curl --location 'https://api.azionapi.net/edge_nodes/' \
