--- a/src/content/docs/en/pages/deploy-journey/configure-node/authorize-node/authorize-node.mdx
+++ b/src/content/docs/en/pages/deploy-journey/configure-node/authorize-node/authorize-node.mdx
@@ -31,7 +31,7 @@ If you've already installed [Azion Orchestrator Agent]() on your device, the nex
 
 ## Via API 
 
-1. Run the following `LIST` request in your terminal, replacing `[TOKEN VALUE]` with your [personal token](/en/documentation/products/guides/personal-tokens/) and retrieve the edge node ID you wish to authorize:
+1. Run the following `GET` request in your terminal, replacing `[TOKEN VALUE]` with your [personal token](/en/documentation/products/guides/personal-tokens/) and retrieve the edge node ID you wish to authorize:
 
 ```bash 
 curl --location 'https://api.azionapi.net/edge_nodes/' \
