--- a/src/content/docs/en/pages/deploy-journey/configure-node/unbind-service/unbind-service.mdx
+++ b/src/content/docs/en/pages/deploy-journey/configure-node/unbind-service/unbind-service.mdx
@@ -29,7 +29,7 @@ You can unbind an edge service from an edge node using:
 
 ## Via API 
 
-1. Run the following `LIST` request in your terminal, replacing `[TOKEN VALUE]` with your [personal token](/en/documentation/products/guides/personal-tokens/) and retrieve the edge node ID to which you wish to unbind an edge service:
+1. Run the following `GET` request in your terminal, replacing `[TOKEN VALUE]` with your [personal token](/en/documentation/products/guides/personal-tokens/) and retrieve the edge node ID to which you wish to unbind an edge service:
 
 ```bash 
 curl --location 'https://api.azionapi.net/edge_nodes/' \
@@ -37,7 +37,7 @@ curl --location 'https://api.azionapi.net/edge_nodes/' \
 --header 'Authorization: Token [TOKEN VALUE]'
 ```
 
-2. Run the following `LIST` request in your terminal, replacing `[TOKEN VALUE]` with your [personal token](/en/documentation/products/guides/personal-tokens/) and `:id` with the ID of the edge node, and retrieve the ID of the relation between the edge node and the chosen service:
+2. Run the following `GET` request in your terminal, replacing `[TOKEN VALUE]` with your [personal token](/en/documentation/products/guides/personal-tokens/) and `:id` with the ID of the edge node, and retrieve the ID of the relation between the edge node and the chosen service:
 
 ```bash
 curl --location 'https://api.azionapi.net/edge_nodes/:id/services' \
