--- a/src/content/docs/en/pages/deploy-journey/configure-node/provision-files/provision-file.mdx
+++ b/src/content/docs/en/pages/deploy-journey/configure-node/provision-files/provision-file.mdx
@@ -45,7 +45,7 @@ import Button from '~/components/Button.astro'
 
 ## Via API
 
-1. Run the following `LIST` request in your terminal, replacing `[TOKEN VALUE]` with your [personal token](/en/documentation/products/guides/personal-tokens/) and retrieve the edge service ID:
+1. Run the following `GET` request in your terminal, replacing `[TOKEN VALUE]` with your [personal token](/en/documentation/products/guides/personal-tokens/) and retrieve the edge service ID:
 
 ```bash 
 curl --location 'https://api.azionapi.net/edge_services/' \
