--- a/src/content/docs/en/pages/deploy-journey/configure-node/work-with-variables/work-with-variables.mdx
+++ b/src/content/docs/en/pages/deploy-journey/configure-node/work-with-variables/work-with-variables.mdx
@@ -50,7 +50,7 @@ I am using {{name}} edge orchestrator
 
 ### Via API 
 
-1. Run the following `LIST` request in your terminal, replacing `[TOKEN VALUE]` with your [personal token](/en/documentation/products/guides/personal-tokens/) and retrieve the edge service ID to which you wish to add a variable:
+1. Run the following `GET` request in your terminal, replacing `[TOKEN VALUE]` with your [personal token](/en/documentation/products/guides/personal-tokens/) and retrieve the edge service ID to which you wish to add a variable:
 
 ```bash 
 curl --location 'https://api.azionapi.net/edge_services/' \
@@ -136,7 +136,7 @@ I am using {{name}} edge orchestrator
 
 ### Via API 
 
-1. Run the following `LIST` request in your terminal, replacing `[TOKEN VALUE]` with your [personal token](/en/documentation/products/guides/personal-tokens/) and retrieve the edge node ID to which you wish to add a variable:
+1. Run the following `GET` request in your terminal, replacing `[TOKEN VALUE]` with your [personal token](/en/documentation/products/guides/personal-tokens/) and retrieve the edge node ID to which you wish to add a variable:
 
 ```bash 
 curl --location 'https://api.azionapi.net/edge_nodes/' \
@@ -144,7 +144,7 @@ curl --location 'https://api.azionapi.net/edge_nodes/' \
 --header 'Authorization: Token [TOKEN VALUE]'
 ```
 
-2. Run the following `LIST` request in your terminal, replacing `[TOKEN VALUE]` with your [personal token](/en/documentation/products/guides/personal-tokens/) and `:id` with the ID of the edge node, and retrieve the ID of the relation between the edge node and the chosen service:
+2. Run the following `GET` request in your terminal, replacing `[TOKEN VALUE]` with your [personal token](/en/documentation/products/guides/personal-tokens/) and `:id` with the ID of the edge node, and retrieve the ID of the relation between the edge node and the chosen service:
 
 ```bash
 curl --location 'https://api.azionapi.net/edge_nodes/:id/services' \
