adjustments deploy menu

--- a/src/content/docs/en/pages/deploy-journey/configure-node/bind-service/bind-service.mdx
+++ b/src/content/docs/en/pages/deploy-journey/configure-node/bind-service/bind-service.mdx
@@ -50,14 +50,7 @@ curl --location 'https://api.azionapi.net/edge_services/' \
 --header 'Authorization: Token [TOKEN VALUE]'
 ```
 
-3. Run the following `POST` request in your terminal, replacing `[TOKEN VALUE]` with your [personal token](/en/documentation/products/guides/personal-tokens/), `:id` with the ID of the edge node informing the edge node ID and informing the ID of the service in the request body:
-
-Request body properties: 
-
-| Property | Description | Required | 
-| - | - | - | 
-| `service_id` | ID of the edge service being bound to the edge node | Yes |
-| `variables` | Variables to be replaced during the processing on the edge node | No (requires checking) |
+3. Run the following `POST` request in your terminal:
 
 ```bash 
 curl --location 'https://api.azionapi.net/edge_nodes/:id/services' \
@@ -74,6 +67,13 @@ curl --location 'https://api.azionapi.net/edge_nodes/:id/services' \
   ]
 }'
 ```
+
+Replace `[TOKEN VALUE]` with your [personal token](/en/documentation/products/guides/personal-tokens/), `:id` with the ID of the edge node informing the edge node ID and inform the following properties in the request body:
+
+| Property | Description | Required | 
+| - | - | - | 
+| `service_id` | ID of the edge service being bound to the edge node | Yes |
+| `variables` | Variables to be replaced during the processing on the edge node | No (requires checking) |
 
 Now, your edge node and your edge service have a relation between them and are ready to be orchestrated. 
 
