--- a/src/content/docs/en/pages/deploy-journey/overview/overview.mdx
+++ b/src/content/docs/en/pages/deploy-journey/overview/overview.mdx
@@ -10,11 +10,11 @@ permalink: /documentation/products/deploy/overview/
 
 import Button from '~/components/Button.astro'
 
-Azion Deploy products are designed to enhance the efficiency of managing edge resources in real time.  
+Azion **Deploy** products are designed to enhance the efficiency of managing edge resources in real time.  
 
 ## Edge Orchestrator
 
-Azion Edge Orchestrator is a versatile cloud management and provisioning service, specifically engineered for edge infrastructures and applications. It empowers operators and customers to manage and control edge resources in real time, including the deployment, update, and management of various components such as:
+**Azion Edge Orchestrator** is a versatile cloud management and provisioning service, specifically engineered for edge infrastructures and applications. It empowers operators and customers to manage and control edge resources in real time, including the deployment, update, and management of various components such as:
 
 - [Edge Services](/en/documentation/products/deploy/edge-orchestrator/edge-services/)
 - [Edge Nodes](/en/documentation/products/deploy/edge-orchestrator/edge-node/)
@@ -25,7 +25,7 @@ Edge Orchestrator is adaptable to various environments, capable of running nativ
 
 An Azion Edge Orchestrator agent is installed on edge nodes and provides end-to-end encrypted remote node management from [Real-Time Manager (RTM)](/en/documentation/products/guides/how-to-access-rtm/).
 
-When the Azion Orchestrator Agent is installed on a device and the device is authorized, it now represents an Edge Node. A service can be linked to many edge nodes. When a service is updated, it'll automatically be deployed to the edge nodes to which it's related.
+When the Azion Orchestrator Agent is installed on a device and the device is authorized, it now represents an edge node. A service can be linked to many edge nodes. When a service is updated, it'll automatically be deployed to the edge nodes to which it's related.
 
 <Button href="/en/documentation/products/deploy/edge-orchestrator/" text="go to edge orchestrator reference documentation" variant="secondary" target="_blank"></Button>
 <br />
@@ -34,7 +34,7 @@ When the Azion Orchestrator Agent is installed on a device and the device is aut
 
 ### Edge Services
 
-Azion Edge Services facilitates resource registration and configuration through [Real-Time Manager (RTM)](/en/documentation/products/guides/how-to-access-rtm/), enabling service orchestration on specified edge nodes.
+**Azion Edge Services** facilitates resource registration and configuration through [Real-Time Manager (RTM)](/en/documentation/products/guides/how-to-access-rtm/), enabling service orchestration on specified edge nodes.
 
 It allows configuration of install, uninstall, and reload triggers, and definition of resource dependencies for edge network service execution.
 
@@ -54,7 +54,7 @@ Edge Orchestrator allows customers to manage their own edge nodes, independent o
 
 ### Credentials 
 
-Credentials are keys used to authenticate edge nodes.
+**Credentials** are keys used to authenticate edge nodes.
 
 <Button href="/en/documentation/products/deploy/credentials/" text="go to credentials reference documentation" variant="secondary" target="_blank"></Button>
 
