--- a/src/content/docs/en/pages/deploy-journey/configure-node/generate-credential/generate-credentials.mdx
+++ b/src/content/docs/en/pages/deploy-journey/configure-node/generate-credential/generate-credentials.mdx
@@ -1,13 +1,13 @@
 ---
 title: How to generate credentials
-description: To be able to install Edge Orchestrator Agent and start orchestrating, you must create your credentials.
+description: Create your credentials to install Edge Orchestrator Agent and start orchestrating.
 meta_tags: deploy, orchestrator
 namespace: docs_deploy_generate_credentials
 menu_namespace: deployMenu
 permalink: /documentation/products/guides/deploy/generate-credentials/
 ---
 
-To be able to install Edge Orchestrator Agent and start orchestrating, you must create your credentials. You can do so using:
+To install **Edge Orchestrator Agent** and start orchestrating, you must create your credentials before. You can do so through:
 
 - [Real-Time Manager (RTM)](/en/documentation/products/guides/how-to-access-rtm/)
 - [Azion API](https://api.azion.com/)
@@ -16,14 +16,12 @@ To be able to install Edge Orchestrator Agent and start orchestrating, you must 
 
 ## Via RTM 
 
-
-1. Access [Real-Time Manager (RTM)](https://manager.azion.com/).
-2. On the upper-right corner of the page, open the **Account menu**, represented by an avatar.
-3. Click the **Add Credential** button.
-4. Choose a name for your credential.
-5. Describe how or by whom the credential will be used in the **Description** field in **Settings**.
+1. Access [Real-Time Manager (RTM)](/en/documentation/products/guides/how-to-access-rtm/) > **Account menu**.
+2. Click the **Add Credential** button.
+3. Give your credential an easy-to-remember name.
+4. Describe how or by whom the credential will be used in the **Description** field in **Settings**.
 - Example: `Credential used for Edge Nodes registration`.
-6. Click the **Save** button.
+5. Click the **Save** button.
 
 A token will be generated after the credential is saved.
 
@@ -37,15 +35,7 @@ When clicking on the created credential on the **Credentials** page, you can:
 
 ## Via API 
 
-1. Run the following `POST` request in your terminal, replacing `[TOKEN VALUE]` with your [personal token](/en/documentation/products/guides/personal-tokens/), and informing the following properties in the request body:
-
-Request body properties: 
-
-| Property | Description | Required | 
-| - | - | - | 
-| `name` | Name of the credential you want to create  | Yes |
-| `description` | Open field to describe your credential with information such as for what purpose it was created | No |
-| `status` | Status of your credential | No  |
+1. Run the following `POST` request in your terminal: 
 
 ```bash 
 curl --location 'https://api.azionapi.net/credentials/' \
@@ -58,6 +48,15 @@ curl --location 'https://api.azionapi.net/credentials/' \
   "status": true
 }'
 ```
+
+Replace `[TOKEN VALUE]` with your [personal token](/en/documentation/products/guides/personal-tokens/) and inform the following properties in the request body:
+
+| Property | Description | Required | 
+| - | - | - | 
+| `name` | Name of the credential you want to create  | Yes |
+| `description` | Open field to describe your credential with information such as for what purpose it was created | No |
+| `status` | Status of your credential | No  |
+
 
 Now you can install Edge Orchestrator agent on your node and start orchestrating your services.
 
