--- a/src/content/docs/en/pages/deploy-journey/configure-node/provision-files/provision-file.mdx
+++ b/src/content/docs/en/pages/deploy-journey/configure-node/provision-files/provision-file.mdx
@@ -10,7 +10,7 @@ permalink: /documentation/products/guides/deploy/provision-files/
 To be able to orchestrate services on your device, you need to configure all the resources. These resources can be: 
 
 - **Text**: for content being copied as plain text to the edge node.
-- **Shell Script**: for resources that will be installed and run according to the selected *trigger*
+- **Shell Script**: for resources that will be installed and run according to the selected *trigger*.
 
 You can create a resource using:
 
@@ -34,7 +34,7 @@ My name is {{name}}, and this is my first added resource
 ```
 
 :::note 
-The tag `{{name}}` will be replaced by the environment configured for the service or the variable configured on the node. The edge node variable will override the variable configure on the edge service
+The tag `{{name}}` will be replaced by the environment configured for the service or the variable configured on the node. The edge node variable will override the variable configure on the edge service.
 :::
 
 import Button from '~/components/Button.astro'
@@ -53,16 +53,7 @@ curl --location 'https://api.azionapi.net/edge_services/' \
 --header 'Authorization: Token [TOKEN VALUE]'
 ```
 
-2. Run the following `POST` request in your terminal, replacing `[TOKEN VALUE]` with your [personal token](/en/documentation/products/guides/personal-tokens/), `:id` with the ID of the edge service and informing the following parameters in the request body:
-
-Request body properties: 
-
-| Property | Description | Required | 
-| - | - | - | 
-| `content_type` | Content type of the resource being created | Yes |
-| `name` | Name of the resource being created | Yes |
-| `content` | Content that defines actions performed when the resource state changes in the edge node | Yes |
-
+2. Run the following `POST` request in your terminal:
 
 ```bash 
 curl --location 'https://api.azionapi.net/edge_services/:id/resources' \
@@ -76,6 +67,13 @@ curl --location 'https://api.azionapi.net/edge_services/:id/resources' \
 }'
 ```
 
+Replace `[TOKEN VALUE]` with your [personal token](/en/documentation/products/guides/personal-tokens/), `:id` with the ID of the edge service and inform the following parameters in the request body:
+
+| Property | Description | Required | 
+| - | - | - | 
+| `content_type` | Content type of the resource being created | Yes |
+| `name` | Name of the resource being created | Yes |
+| `content` | Content that defines actions performed when the resource state changes in the edge node | Yes |
 
 Now, your resource is created and able to work with the edge nodes related to the service in specific. 
 
